updated at: 2023-04-25 23:23, 学生鞄モデル（可動モデル＋固定モデル） - bisy`s shop - BOOTH

--- a/VRChat/88/1238888.html
+++ b/VRChat/88/1238888.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5TGZDmxeqAwwWAUD4Wyxk9/s0lpDu8zjOlDZc1mA+jQ="></script>
+    "yYcPQNq165Oqk5SlLtTmrx5uYoyfuJwBKgh8Z3puBVw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"学生鞄モデル（可動モデル＋固定モデル）","description":"学生鞄モデルセットです。\n\n内容物：\nUnitypackage2種\nfbxファイル2種\nテクスチャ2種\n\nモデル\nkaban：\nシェイプキーとボーンによる可動モデルです。\n通常取っ手とテープ取っての2種類から選択できます。\n\nkabanpetan：\n潰れた鞄のモデルです。\n鞄の開閉のボーンのみで、厚みや取っ手は固定です。\n\n\n改変・改造自由\n再配布禁止\n\n不具合や不明な点があればご連絡ください。","url":"https://booth.pm/ja/items/1238888","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/1238888/7f9e0e7e-a17d-430c-9ee1-dc731bcd157a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5TGZDmxeqAwwWAUD4Wyxk9/s0lpDu8zjOlDZc1mA+jQ="></script>
+    nonce="yYcPQNq165Oqk5SlLtTmrx5uYoyfuJwBKgh8Z3puBVw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1238888/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               49
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1238888/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               49
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
