updated at: 2023-04-25 23:23, VRChat Photo Selector - カメラ撮影した画像をワールドごとに仕分けする - のの屋 - BOOTH

--- a/VRChat/76/1238476.html
+++ b/VRChat/76/1238476.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Jh1Z66AuoYfG4InWKXG7Nl1GRUCIYxC/9wKmzcBqnIk="></script>
+    "NeNfFOIo+lJnmJpEgPP0OxDt25GwB4rdu/7jY8YOs+g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat Photo Selector - カメラ撮影した画像をワールドごとに仕分けする","description":"[ja]\nVRChatのVRモードでカメラ撮影した画像ファイルをワールドごとのフォルダに仕分けします。\n\n[en]\nSort the photo image files taken by VR camera in VRChat into folders for each world.\n\n","url":"https://booth.pm/ja/items/1238476","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/0bad566e-2b36-415e-ae3c-fcc3b09373e8/i/1238476/394e8285-4750-434f-af6d-326a5f1cf92b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Jh1Z66AuoYfG4InWKXG7Nl1GRUCIYxC/9wKmzcBqnIk="></script>
+    nonce="NeNfFOIo+lJnmJpEgPP0OxDt25GwB4rdu/7jY8YOs+g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1238476/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1238476/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
