--- a/VRChat/12/1238212.html
+++ b/VRChat/12/1238212.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fQUUqyEi31e4IiWd82jFXPOSL7i9RtegVFyKh7sQkCA="></script>
+    "rZScOpMk4+h3Df5oZlUMq9ksuHVRm6ef0JUqtJopVjE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"菱餅とお皿","description":"桃の節句（ひな祭り）でお馴染みの菱餅とそれを乗せるためのお皿を作りました。\n菱餅とお皿は別々のファイルにしてあるのでご自身の手でUnity上で2つをドッキングしてご使用ください。\n菱餅とお皿どちらか単品での使用も可能ですので自由に改変などしてご使用ください。\n\n\n【内容物】\n・osara FBX\n・oarasa unitypackage\n・osara PNG（テクスチャ）\n・hisimoti FBX\n・hisimoti unitypackage\n・hisimoti PNG（テクスチャ）\n\n【利用規約】\n・著作権は作者であるKanかんが保有しています。\n・本データの再配布、販売は禁止とします。\n・悪意のある使用は禁止とします。\n・商標利用は可能です。\n\n\n【最後に】\n初めての3Dモデル販売のため何か至らぬ点などあるかとは思いますが宜しくお願い致します。","url":"https://booth.pm/ja/items/1238212","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/6e8fc3f2-9b46-41cf-84e9-6e0e717b064e/i/1238212/413eb295-ed77-4411-9157-8e5bf8f0aac3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fQUUqyEi31e4IiWd82jFXPOSL7i9RtegVFyKh7sQkCA="></script>
+    nonce="rZScOpMk4+h3Df5oZlUMq9ksuHVRm6ef0JUqtJopVjE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1238212/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1238212/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
