--- a/VRChat/73/1237473.html
+++ b/VRChat/73/1237473.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "18Ry5vI78D2a5daDm6R7GHWkK2+b3RYMZMs+1FkeJFc="></script>
+    "QxuvrzTBvnr6K8tlNO6g0dlE6K8m6uAkVt0Dn6uAJqc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"兎のお面","description":"兎のお面 \nﾎﾟﾘｺﾞﾝ数1402\n\n内容物\n1.お面のobjファイル\n2.お面のテクスチャファイル\n3.お面のSculptrisファイル\n4.お面のBlenderファイル（通常、裏面透明@２つ）\n5.お面のFBXファイル（通常、裏面透明@２つ）\n6.readme\n\n\n兎のお面の3Dデータです\n至らない点があるかもしれませんが、ご了承いただける方だけご購入ください。購入後の苦情は受け付けかねます。\n※本作品はSuclptrisを仕様して作成しています。\n※特にボーン等は入っておりません\n\n改変は自由です。\n商用利用、再販、再配布、改変後の販売は不可とします。\n本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n\n\n本データの著作権は作成者の狐が有します。","url":"https://booth.pm/ja/items/1237473","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/50dd0ee9-b096-417f-bb42-d66b91a07be1/i/1237473/e885e5e9-53cc-42f4-9507-157f75688ff9_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="18Ry5vI78D2a5daDm6R7GHWkK2+b3RYMZMs+1FkeJFc="></script>
+    nonce="QxuvrzTBvnr6K8tlNO6g0dlE6K8m6uAkVt0Dn6uAJqc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1237473/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               328
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1237473/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               328
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
