updated at: 2023-04-25 23:25, ピクニックシート - あめ子まーと - BOOTH

--- a/VRChat/01/1237001.html
+++ b/VRChat/01/1237001.html
@@ -69,9 +69,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -101,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FKwQhOP25ykDpEyA1z7OEQdImZEzy+RjnROXda1nAMc="></script>
+    "kqnjvZzg4RWb6exRhw3JAt/QRizpgpZeXRYkP2fr8VU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ピクニックシート","description":"ピクニックシートの3Dモデルです。\nワールドの一部としてお使いいただけます。\n\nこちらのファイルはVRChatでの利用を想定し作成されています。\n\n【内容物】\nUnityパッケージ\nFBXファイル\nテクスチャ１枚\n\nロゴ協力：きのこすぴん\nバーチャルマーケット運営\n","url":"https://booth.pm/ja/items/1237001","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/a4a7842d-1a6a-4d2b-a80c-4c704fe5040b/i/1237001/26583e01-8913-4448-bd96-ce3297ab3d94_base_resized.jpg"}
     </script>
@@ -114,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FKwQhOP25ykDpEyA1z7OEQdImZEzy+RjnROXda1nAMc="></script>
+    nonce="kqnjvZzg4RWb6exRhw3JAt/QRizpgpZeXRYkP2fr8VU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -138,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -152,7 +151,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -193,7 +193,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1237001/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -208,14 +208,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1237001/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
