updated at: 2023-04-25 23:25, バーチャル応援うちわ【VRChat】 - uminek.ooo marine store - BOOTH

--- a/VRChat/11/1236511.html
+++ b/VRChat/11/1236511.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kR/rPu6X/TIDtuesyXekwjNHv7KYXsB5PAuo3Hoqzk0="></script>
+    "lNs9ChJlulxjFUf9emxv9nqRZZF2c6t1aJmhGzjFyXk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バーチャル応援うちわ【VRChat】","description":"バーチャル応援うちわv1.0.0\n\n作者: uminek.ooo / うみねこ (Twitter: @uminek_ooo)\n\n132ポリゴン\n\nこだわりの応援うちわを作ろう！\n表裏テクスチャが分かれているので簡単に改造可能！\n\nVRChat等での使用を想定\n\nマテリアル数が３個と多いのですが、改変しやすさを重視した結果です、ご了承ください。\n\nVRChat で使う場合、うちわ.unitypackageをプロジェクトにD\u0026Dし、\nモデルの Armature の Hand.XX などの階層の下に、うちわ/うちわ.prefabを入れていただく形に\nなると思われます。\n\nサイズは\n 柄を除いたうちわ部分 : 295mm x 285mm \n となっていて、応援用うちわと同じサイズなので\n 実物の写真をテクスチャにしてみても合うかもしれません。\n\nCC0 license (商用利用可, クレジット不要, 再配布可能, 改変可能)\n\n【免責事項】\n・モデル製作者は当モデルデータを利用したことにより発生した損害、損失、その他の不利益に対して一切の責任を負いません。","url":"https://booth.pm/ja/items/1236511","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fbee7eed-172e-4c6e-8c37-d7f3925eb17f/i/1236511/6c057100-d138-46de-9fb6-0f4ece129826_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kR/rPu6X/TIDtuesyXekwjNHv7KYXsB5PAuo3Hoqzk0="></script>
+    nonce="lNs9ChJlulxjFUf9emxv9nqRZZF2c6t1aJmhGzjFyXk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1236511/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               87
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1236511/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               87
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
