updated at: 2023-04-25 23:25, 【3Dモデル】AZインフィニティ　スターターパック - ACW＠ムスファン - BOOTH

--- a/VRChat/09/1236309.html
+++ b/VRChat/09/1236309.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Dl/LkdnJ3/CmT1ILepG4ecxBogNzJ5fuwRiAl50QHgU="></script>
+    "2Qr3f4tFSZD93SciLxmCdDtYLIcT+KqhZ/M/xgkT8nA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】AZインフィニティ　スターターパック","description":"架空自動拳銃　AZインフィニティ　の三種類のバリエーションを纏めたVRChat向け3Dデータになります。\n\nポリゴン数　 / マテリアル数：\n\nStandard ▽9776 / 14\nCarry  ▽9896 / 14\nTactical ▽12674 / 14\n\n*全パーツ搭載時の数値になります。\n\n\nバーション1.1へのアップデート：\n\n・スタンダードモデル、タクティカルモデル、角の変な歪み（最後の画像オレンジ丸を付けているところ）がついてしまう問題を修正しました。伴いポリゴン数をちょっとだけ増加しました。\n\n・キャリーモデルのプレハブ、イジェクターのアクティブ設定が左右逆になってしまう問題を修正しました。\n\nお手数ですが再ダウンロードお願いします。\n申し訳ございませんでした。","url":"https://booth.pm/ja/items/1236309","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/5e441304-d175-4dfe-a078-a33651e7e74d/i/1236309/0a48aeb7-9dbb-49fa-a9f6-0f260887a9fd_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Dl/LkdnJ3/CmT1ILepG4ecxBogNzJ5fuwRiAl50QHgU="></script>
+    nonce="2Qr3f4tFSZD93SciLxmCdDtYLIcT+KqhZ/M/xgkT8nA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1236309/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               169
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1236309/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               169
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
