--- a/VRChat/16/1236316.html
+++ b/VRChat/16/1236316.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "rfbI+kMR8Rd6fjNakNPFXO/WvlwX61BhxsPh+Vj9/PY="></script>
+    "oP4cSze1BASVQK+CvEmG5ROG2NM0/f2WfS+fQ8CZzcE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC想定モデル　コンチェルロボ","description":"原作：タオルケットをもう一度1\nコンチェルロボのfbxファイルです\n二次創作の範囲内でご使用ください。\n\n2019.02.19 公開\n2019.02.21 unitypacageにしました\nprefab,マテリアルがなかったので追加\n瞬きアニメーションの修正\n視点位置のメモを入れました","url":"https://booth.pm/ja/items/1236316","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/2471e628-902e-4637-af59-ef7d79b131ef/i/1236316/ab71ff10-5e69-4fb4-919c-b15b49497102_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rfbI+kMR8Rd6fjNakNPFXO/WvlwX61BhxsPh+Vj9/PY="></script>
+    nonce="oP4cSze1BASVQK+CvEmG5ROG2NM0/f2WfS+fQ8CZzcE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1236316/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1236316/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
