updated at: 2023-04-25 23:26, たましこボクセル15体パック(.vox) - たましこしょっぷ - BOOTH

--- a/VRChat/46/1235446.html
+++ b/VRChat/46/1235446.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "p0fC0zYRcVv27/aLRaEjjI1kPflBcry7q22lzgJKc+Q="></script>
+    "nNiBXwIxL1qbCPp8ypSAfqCAOYlLih+5zyYxpTQ+y9Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"たましこボクセル15体パック(.vox)","description":"※voxファイルです。そのままではアバター等の用途として利用できません。\n\nたましこがメインで使ってるボクセルアバターを15体セットにしました。MagicaVoxelで読み込むことが出来る.vox形式になります。\nHumanoid設定がされているモデルが欲しい方は別途ご相談ください。\n\n簡易利用規約\n二次配布しないならなにしてもいいよ\n改変モデルを譲渡/配布したい場合は要相談\n\n内容物\nアニス\nアレッタ\nカサンドラ\nクミン\nローリエ\nローリエメイド\nマリー\nナツメグ\nサキュバス\nシャッキー\n石油王\nベニスマン\nちび巫女狐\nボクセルファミリアス\n","url":"https://booth.pm/ja/items/1235446","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/819690b9-2e1e-4dfe-b0c7-d8f3c1a5c16a/i/1235446/e19bfc1e-3562-4652-9b82-5bd2dd53dd5c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="p0fC0zYRcVv27/aLRaEjjI1kPflBcry7q22lzgJKc+Q="></script>
+    nonce="nNiBXwIxL1qbCPp8ypSAfqCAOYlLih+5zyYxpTQ+y9Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1235446/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1235446/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
