--- a/VRChat/53/1235353.html
+++ b/VRChat/53/1235353.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "q42xIjURp+i0K3DXNaXm8g/cqs5Ke/YDt9/YJv2i+k4="></script>
+    "ULAnl8Xy6wS+v+xdyltuml1zpDBwFToVIHS/+GNwchA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け_月ネックレス","description":"ＶＲＣ向けと書いてますが、基本ご自由にお使いください。\n\n※再配布、自作発言はおやめください。\n\nポリゴン数が△が１５４００と少し多めになっています。多いと感じられたらブレンダーなどでポリゴン数を減らすことをオススメします。\n\n使い方としてはchestのところに入れるといいかもしれません。\n\n追記：月ネックレスの軽量版もダウンロードできます！（△が２７００ポリと少なくなっています。）\n","url":"https://booth.pm/ja/items/1235353","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/521730e0-f768-4371-b0ec-397b8f2b0bb4/i/1235353/ef062b95-3a5c-4a7e-8fa8-5de935ff65e2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="q42xIjURp+i0K3DXNaXm8g/cqs5Ke/YDt9/YJv2i+k4="></script>
+    nonce="ULAnl8Xy6wS+v+xdyltuml1zpDBwFToVIHS/+GNwchA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1235353/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               226
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1235353/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               226
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
