updated at: 2023-04-27 16:22, 後装式シングルアクション拳銃 - 柳生滑脱流 - BOOTH

--- a/VRChat/69/1234869.html
+++ b/VRChat/69/1234869.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/627768aa981caf4f27ae.js" defer=
+    "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "LFQtca+UF6duPTKRRE4Yaay8mKOKO+fw3/OGuA3jJ+4="></script>
+    "Zq5I8Ln/aLaa5ml1pdnhNZRwGQtyIg2HiKO1NCJbmZY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"後装式シングルアクション拳銃","description":"後装式シングルアクション拳銃のフルスクラッチモデルです\n主にVRchatでの使用を想定しています\nシェイプキーで中折れ機構、トリガー、ハンマーが動きます\n\nメッシュ：本体(3342△※内蔵された空薬莢込みで)銃弾(636△)\n\n\n●内容\n\n・Unity package\n\n・fbx\n\n・テクスチャ各種\n\n●使用方法\n\n・Unity Packageまたはfbx､テクスチャを各種ソフトにインポートしてご利用下さい。\n\n●利用について\n\n・配布行為そのものを目的とした再配布を禁止\n\n・宗教や政治的主張等での使用は禁止\n\n・自作発言の禁止\n\n●免責事項\n\n・当モデルを使用することで使用者側に不利な問題が生じた場合、\nそれがいかなるものであっても配布元は一切責任を負いません。","url":"https://booth.pm/ja/items/1234869","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/196987f0-be5d-429f-9fe5-a55e7248f501/i/1234869/e96f8929-a078-468d-8c91-775dd25c94c8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LFQtca+UF6duPTKRRE4Yaay8mKOKO+fw3/OGuA3jJ+4="></script>
+    nonce="Zq5I8Ln/aLaa5ml1pdnhNZRwGQtyIg2HiKO1NCJbmZY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -160,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1234869/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              69
+                              68
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -175,10 +175,10 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1234869/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              69
+                              68
                             </div>
                           </div></a>
                         </div>
