updated at: 2023-05-01 21:47, [無料配布]VRC向けﾘｯﾁ三つ編み - おいしいおいも屋 - BOOTH

--- a/VRChat/97/1287097.html
+++ b/VRChat/97/1287097.html
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "DZ+pNpyY/AznBHVt1yMye+3vvyIajDx9KmiaYMGJv9A="></script>
+    "bi3AODZuCB99M/noG0SOwG9RGLtEJqo2C5enUaMbB3k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料配布]VRC向けﾘｯﾁ三つ編み","description":"VRChat向け三つ編みfbxとテクスチャ(png/psd)のセットです．\n\n有料UnityアセットのDynamicBoneを当てるとプラプラできます．\n任意のモデルのheadの子にMitsuami00ボーン以下を置いて，DynamicBoneのRootをMitsuami01にしてMitsuami01以下が揺れるような設定を推奨します．\n両面描写のできるシェーダーを使ってください．\n\nこのサイズでボーン6本入りかつかなりポリゴン数が多いのでだいぶpoorなモデルです．ご容赦ください．\n\nVRCにおけるパブリックアバターやペデスタル用アバターへの利用は許可しています．\n\n\n商用利用（※1）・映像制作・ゲーム制作等の用途へもご自由にどうぞ．著作表記も任意で大丈夫です．(もちろん｢ここで使ったよ！見かけたよ！｣のご連絡は頂けると私がとってもうれしいです。) \n\n改変を施したものにかぎり著作表記と規約ページへのリンクをしていただければ再配布も可とします。\nそのままの状態での再配布はご遠慮ください。\nまたVRCでのパブリックアバターとしての公開は再配布と見なしませんのでご自由にどうぞ。\n\n （くわしくは：ライセンス( https://moco-rocket.space/license/ ） \n（本データを利用した時点でライセンスに同意したものと見なされます）\n\n\n  ※1: ただし、法人格を持った団体による商用利用は事後でも良いのでご連絡ください。自分が想定していなかった影響力の強い利用方法がある場合に把握しておきたいためです。なお、社内での使用、取引先への提案資料への使用、広告・スパチャ付きの配信に一般の使用者が映り込む、など、公にならない場合や想定しようがない場合は商用とは見なしません。","url":"https://booth.pm/ja/items/1287097","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/166baec2-617e-4370-b11d-153e0f35a98a/i/1287097/7562e71d-a01a-485b-9f46-d0972acf8724_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DZ+pNpyY/AznBHVt1yMye+3vvyIajDx9KmiaYMGJv9A="></script>
+    nonce="bi3AODZuCB99M/noG0SOwG9RGLtEJqo2C5enUaMbB3k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -499,7 +499,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
+    "[{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
