updated at: 2023-05-01 21:48, VRCごいたシステム - a3s - BOOTH

--- a/VRChat/01/1285501.html
+++ b/VRChat/01/1285501.html
@@ -75,7 +75,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "dz65qo6zihrjWcuEHnQ1XJL9TEyjuCM0XcLJRb0j+hA="></script>
+    "oddHGu8Hbvz2P2POYg16+MngJaIg+fct0DWgNi2eGnA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCごいたシステム","description":"VRChatにアップしたごいたシステムです。\nhttps://vrchat.com/home/launch?worldId=wrld_e5b3507c-6d87-4aab-8853-03829da1ec2f\n本パッケージを導入することで、VRChatの自ワールドにごいたを設置できます。\nゲームワールド増えろ！\n\n●使用方法\nVRCSDK2導入済みプロジェクトへインポートしてください。\nこのとき、添付の「レイヤー設定1.png」「レイヤー設定2.png」の通り下記より設定ください。\n①Inspector \u003e Layer \u003e Add Layer...\n②Edit \u003e Project Settings \u003e Physics\n下記にサンプルシーンがありますのでご利用ください。\n　Assets\\Goita\\GoitaPublic.unity\nVRCのコントロールパネルの指示に従い、各種設定をすることでワールドとしてアップロードできます。\n盤を自分のワールドへ追加するなどしてお使いください。\n\n●ライセンス\nこれを利用したワールドの公開等OKです。よしなに。\n利用によって生じたいかなる損害についても責任を負いません。\n\n●以下の機能が含まれます。\n・得点計算\n・シャッフル機構\n・3Dごいた駒、盤\n\n●以下の機能は含まれません\n・BGM\n・鼓門\n・背景画像\n・VRCSDK、他アセット類\n・標準ごいた盤以外","url":"https://booth.pm/ja/items/1285501","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/55e0ade6-1a8a-42bf-b4f4-91cc5bdbb5ca/i/1285501/58a8db15-f589-4e2b-81d4-8192bb2794ed_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dz65qo6zihrjWcuEHnQ1XJL9TEyjuCM0XcLJRb0j+hA="></script>
+    nonce="oddHGu8Hbvz2P2POYg16+MngJaIg+fct0DWgNi2eGnA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -510,7 +510,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
+    "[{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
